# Inkscape

./: .gitignore  என்னைபடி.உரை
.github/: ReadMe.md
.github/workflows/: கட்டுப்பணி.yml  தானிவெளியீடு.உரை  புதியவெளியீடு.yml
App/மைசுமப்பவன்/share/inkscape/extensions/: .pylintrc  CONTRIBUTING.md  README.md  TESTING.md  color_blackandwhite.py  color_brighter.py  color_darker.py  color_grayscale.py  color_hsl_adjust.py  color_lesslight.py  color_lesssaturation.py  color_morelight.py  color_moresaturation.py  color_replace.inx  color_replace.py  construct_from_triangle.py  convert2dashes.inx  convert2dashes.py  dimension.py  distribute_along_path.py  docinfo.py  dpiswitcher.py  draw_from_triangle.py  dxf14_header.txt  dxf_outlines.inx  dxf_outlines.py  eps_input.inx  export_gimp_palette.py  extrude.inx  extrude.py  fig_input.py  flatten.inx  flatten.py  foldablebox.py  fractalize.py  frame.inx  gimp_xcf.inx  grid_cartesian.py  grid_isometric.py  hpgl_input.inx  (+86 more)
App/மைசுமப்பவன்/share/inkscape/extensions/docs/: conf.py
App/மைசுமப்பவன்/share/inkscape/extensions/docs/authors/: inx-widgets.rst  submit.rst
App/மைசுமப்பவன்/share/inkscape/extensions/docs/extensions/: index.rst  svg2xaml.rst
App/மைசுமப்பவன்/share/inkscape/extensions/ink2canvas_lib/: canvas.py  svg.py
App/மைசுமப்பவன்/share/inkscape/extensions/inkman/inkman/: pyproject.toml
App/மைசுமப்பவன்/share/inkscape/extensions/inkman/inkman/inkman/gui/: __init__.py  main.py
App/மைசுமப்பவன்/share/inkscape/extensions/other/clipart/: MANIFEST.in  import_web_image.inx  import_web_image.py  import_web_image_cli.py
App/மைசுமப்பவன்/share/inkscape/extensions/other/clipart/sources/: inkscape-web.py  ocal.py
App/மைசுமப்பவன்/share/inkscape/extensions/other/gcodetools/: .darglint  README.md  gcodetools_area.inx  gcodetools_prepare_path_for_plasma.inx  tox.ini
Data/: 01-portableapps.conf
Data/fontconfig/cache/: 057dedda7a4f5990bcf5453c2e20fe3d-i686.cache-8  07163e4002fbdbd3841e12977a5fb2ed-i686.cache-8  60fd5e61fdd2933b86c27dd6132fd1dd-i686.cache-8  96b7c314d9af35eef090f74c16caa0f8-i686.cache-8  98aeb4b89fa77409d948328b3b88ebbc-i686.cache-8  a7e8a82f8274a3b3ef9e3781f9b77d5e-i686.cache-8  aa30e3dd358df32b9dd2d07a2642069f-i686.cache-8  b28c5e0e5f874cb88bae8f06a80db831-i686.cache-7  ef9c9ad8cc5857eb63cb3660bc8bd202-i686.cache-8
Data/settings/: InkscapePortableSettings.ini  preferences.xml  மைசுமப்பவன்Settings.ini
Data/settings/.dbus-keyrings/: org_gtk_gdbus_general
மைசுமப்பவன்/App/AppInfo/: appinfo.ini  pac_installer_log.ini
(+984 files in other folders)
